@@ -6,16 +6,16 @@ OT_SpectralModel_doc
 OT_SpectralModel_computeStandardRepresentative_doc
 %feature("docstring") OT::SpectralModel::draw
 OT_SpectralModel_draw_doc
-%feature("docstring") OT::SpectralModel::getDimension
-OT_SpectralModel_getDimension_doc
+%feature("docstring") OT::SpectralModel::getOutputDimension
+OT_SpectralModel_getOutputDimension_doc
 %feature("docstring") OT::SpectralModel::getAmplitude
 OT_SpectralModel_getAmplitude_doc
 %feature("docstring") OT::SpectralModel::getScale
 OT_SpectralModel_getScale_doc
-%feature("docstring") OT::SpectralModel::getSpatialCorrelation
-OT_SpectralModel_getSpatialCorrelation_doc
-%feature("docstring") OT::SpectralModel::getSpatialDimension
-OT_SpectralModel_get_spatial_dimension_doc
+%feature("docstring") OT::SpectralModel::getOutputCorrelation
+OT_SpectralModel_getOutputCorrelation_doc
+%feature("docstring") OT::SpectralModel::getInputDimension
+OT_SpectralModel_getInputDimension_doc
 %feature("docstring") OT::SpectralModel::setAmplitude
 OT_SpectralModel_setAmplitude_doc
 %feature("docstring") OT::SpectralModel::setScale
